# mapcode-cpp

./: .gitignore  CMakeLists.txt  NOTICE  README  README.md  README.txt  RELEASE_NOTES  \  index.html  mapcode  mapcode.c  mapcode_library.doc  mapcode_library_c.doc  params.json
docs/: mapcode_library_c.doc  mapcode_library_c.docx
docs/superpowers/: perf-results.md
docs/superpowers/plans/: 2026-05-28-mapcodelib-optimize.md
docs/superpowers/specs/: 2026-05-28-mapcodelib-optimize-design.md
example/: mapcode.c  mapcode.cpp
mapcodelib/: basics.h  dividemaps.h  internal_alphabet_recognizer.h  internal_data.h  internal_iso3166_data.h  internal_territory_alphabets.h  internal_territory_names_af.h  internal_territory_names_ar.h  internal_territory_names_ax.h  internal_territory_names_be.h  internal_territory_names_cn.h  internal_territory_names_cs.h  internal_territory_names_da.h  internal_territory_names_de.h  internal_territory_names_en.h  internal_territory_names_english.h  internal_territory_names_english_full.h  internal_territory_names_es.h  internal_territory_names_fi.h  internal_territory_names_fr.h  internal_territory_names_he.h  internal_territory_names_hi.h  internal_territory_names_hr.h  internal_territory_names_id.h  internal_territory_names_it.h  internal_territory_names_ja.h  internal_territory_names_ko.h  internal_territory_names_local.h  internal_territory_names_nl.h  internal_territory_names_no.h  internal_territory_names_pl.h  internal_territory_names_pt.h  internal_territory_names_ru.h  internal_territory_names_se.h  internal_territory_names_sv.h  internal_territory_names_sw.h  internal_territory_names_tr.h  internal_territory_names_uk.h  internal_territory_search.h  mapcode_alphabets.h  (+11 more)
mapcoder/: basics.h  mapcode_library.doc  mapcoder.c  mapcoder.h  readme.txt
test/: README.md  clean.sh  decode_test.h  no_warnings.env  run_all.sh  run_compare.sh  run_gcov.sh  run_gprof.sh  run_normal.sh  run_sanitizer.sh  run_valgrind.sh  test_territories.h  unittest.c
unittest/: README.md  alphabets.csv  clean.sh  decode_test.h  run_all.sh  run_compare.sh  run_gcov.sh  run_gprof.sh  run_normal.sh  run_sanitizer.sh  run_valgrind.sh  territories.csv  test_territories.c  test_territories.h  unittest.c
unitttest/: README.md  decode_test.h  unittest  unittest.c
utility/: README.md  compile.sh  mapcode.cpp
